--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </div>
           </div>
           <div class="more-services-button big-button">
-            <a href="proekty%3Fpage=3.html">все проекты</a>
+            <!-- <a href="proekty%3Fpage=3.html">все проекты</a> -->
           </div>
         </div>
       </div>
