Fixes styles for ipad

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <header>
     <div class="container">
       <div class="row heading-top">
-        <div class="col-sm-2 logo"><a href="0.html"></a>
+        <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 logo"><a href="0.html"></a>
           <span class="logo-title">va</span> <span>Проектно-інжинірингова компанія</span></a></div>
-        <div class="col-sm-3 call-request" data-toggle="modal" data-target="#callRequest"><img
+        <div class="col-xs-12 col-sm-3 col-md-4 col-xl-3 call-request" data-toggle="modal" data-target="#callRequest"><img
             src="assets/img/call-request-icon.png" alt="изображение заказ звонка" title="изображение заказ звонка">
           <span>Замовити зворотній дзвінок</span></div>
-        <div class="col-sm-6"><a href="tel:+38097474004" class="phone ya-phone"><i class="fa fa-phone"></i> <span>+
+        <div class="col-sm-6 phones"><a href="tel:+38097474004" class="phone ya-phone"><i class="fa fa-phone"></i> <span>+
               (380)974 740 04</sapn></a> / <a href="mailto:veedva@i.ua" class="mail"><i class="fa fa-envelope"></i>
             <span>veedva@i.ua</span></a></div>
       </div>
@@ -127,7 +127,7 @@
           <div class="services-list">
 
 
-            <div class="col-sm-3 single-service">
+            <div class="col-sm-4 single-service">
               <div class="link">
                 <div class="image-wrap">
                   <img src="assets/img/resource-bim-the-importance-of-bim-in-the-lighting-industry.jpg"
@@ -137,17 +137,17 @@
               </div>
               <div class="service-name"><a href="bim-proektirovanie.html">Енергоаудит та енергоменеджмент</a></div>
             </div>
-            <div class="col-sm-3 single-service">
+            <div class="col-sm-4 single-service">
               <div class="link">
                 <div class="image-wrap">
-                  <img src="assets/img/service-2.png" alt="Комплексное проектирование"
+                  <img src="assets/img/288.jpg" alt="Комплексное проектирование"
                     title="Комплексное проектирование">
                 </div>
               </div>
               <div class="service-name"><a href="kompleksnoe-proektirovanie/index.html">Комплексне проектування</a>
               </div>
             </div>
-            <div class="col-sm-3 single-service">
+            <div class="col-sm-4 single-service">
               <div class="link">
                 <div class="image-wrap">
                   <img src="assets/img/service-2.png" alt="Эскизное проектирование" title="Эскизное проектирование">
@@ -155,10 +155,10 @@
               </div>
               <div class="service-name"><a href="jeskiznoe-proektirovanie.html">Ескізне проектування</a></div>
             </div>
-            <div class="col-sm-3 single-service">
+            <div class="col-sm-4 single-service">
               <div class="link">
                 <div class="image-wrap">
-                  <img src="assets/img/02zxwq8i.jpg" alt="Проектирование инженерных систем и сетей"
+                  <img src="assets/img/sis-4.jpg" alt="Проектирование инженерных систем и сетей"
                     title="Проектирование инженерных систем и сетей">
                 </div>
 
@@ -166,7 +166,7 @@
               <div class="service-name"><a href="proektirovanie-inzhenernyh-sistem-i-setej.html">Проектування інженерних
                   систем та мереж</a></div>
             </div>
-            <div class="col-sm-3 single-service">
+            <div class="col-sm-4 single-service">
               <div class="link">
                 <div class="image-wrap">
                   <img src="assets/img/11362.jpeg" alt="Проектирование зданий и сооружений"
@@ -175,6 +175,15 @@
               </div>
               <div class="service-name"><a href="proektirovanie-zdanij-i-sooruzhenij.html">Проектування будівель та
                   споруд</a></div>
+						</div>
+						<div class="col-sm-4 single-service">
+              <div class="link">
+                <div class="image-wrap">
+                  <img src="assets/img/interior-design1-600-300.webp" alt="3D Визуалiзацiя"
+                    title="3D Визуалiзацiя">
+                </div>
+              </div>
+              <div class="service-name"><a href="proektirovanie-zdanij-i-sooruzhenij.html">3D Визуалiзацiя</a></div>
             </div>
 
 
@@ -190,7 +199,7 @@
             <noindex>БАЖАЄТЕ отримати безкоштовну&nbsp;<br>консультацію спеціаліста?</noindex>
           </div>
           <form role="form" enctype="multipart/form-data" method="post" action="0.html" class="ajax_form af_example">
-            <input type="tel" name="phone" placeholder="+380(___) - ___- __ - __" required>
+            <input type="tel" name="phone" placeholder="+380(__) - ___- __ - __" required>
             <input type="email" name="email" placeholder="simple@gmail.com">
             <button onclick="yaCounter50366911.reachGoal('ostavit_zayavku'); return true;" type="submit">Замовити
               безкоштовну консультацію</button>
@@ -459,7 +468,7 @@
               </div>
               <form role="form" enctype="multipart/form-data" method="post" action="0.html"
                 class="ajax_form af_example">
-                <input type="tel" placeholder="+380(___) - ___- __ - __" name="phone" required>
+                <input type="tel" placeholder="+380(__) - ___- __ - __" name="phone" required>
                 <div class="agree-seo"><label><input type="checkbox" required> Даю згоду на обробку персональних
                     даних</label></div>
                 <div class="big-button"><button onclick="yaCounter50366911.reachGoal('call'); return true;"
@@ -478,10 +487,10 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <div class="col-sm-2 logo"><a href="0.html"></a>
+          <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 logo"><a href="0.html"></a>
             <span class="logo-title">va</span> <span>Проектно-інжинірингова компанія</span></a></div>
           <div class="col-sm-4 address">
-            <div>VeedVA LTD © 2019 </div>
+            <div>VeedVA LTD © 2017-2019 </div>
             <div>
               <noindex>49000, м. Дніпро, вул. Князя Володимира Великого, 18 </noindex>
             </div>
