--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>VeedVA LTD</title>
-  <base href="" />
+  <base href="veedva.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
   <meta name="keywords"
     content="проектная компания,проектная компания сайт,инженерно проектная компания,инженерная компания,инженерная компания сайт,услуги инженерной компании,инженерные организации,проектные инженерные организации">
@@ -18,19 +18,12 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/css/bootstrap-slider.min.css">
   <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <link rel="stylesheet" href="assets/css/style.css">
-
-
-
-
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.1.60/inputmask/jquery.inputmask.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/bootstrap-slider.min.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="assets/js/script.js"></script>
-  <link rel="stylesheet" href="assets/components/ajaxform/css/default.css" type="text/css" />
-  <link rel="canonical" href="0.html" />
-  <link rel="next" href="index.html%3Fpage=2.html" />
 </head>
 
 <body>
@@ -198,13 +191,11 @@
           <div class="heading">
             <noindex>БАЖАЄТЕ отримати безкоштовну&nbsp;<br>консультацію спеціаліста?</noindex>
           </div>
-          <form role="form" enctype="multipart/form-data" method="post" action="0.html" class="ajax_form af_example">
+          <form role="form" method="post"  class="ajax_form af_example">
             <input type="tel" name="phone" placeholder="+380(__) - ___- __ - __" required>
             <input type="email" name="email" placeholder="simple@gmail.com">
-            <button onclick="yaCounter50366911.reachGoal('ostavit_zayavku'); return true;" type="submit">Замовити
+            <button type="submit">Замовити
               безкоштовну консультацію</button>
-
-            <input type="hidden" name="af_action" value="dd340d1f4e65081dd3143cb67e481a70" />
           </form>
         </div>
       </div>
@@ -466,15 +457,13 @@
               <div class="sub-heading">
                 <noindex>Введіть Ваш номер телефону, ми зв'яжемось з Вами протягом 10 хвилин!</noindex>
               </div>
-              <form role="form" enctype="multipart/form-data" method="post" action="0.html"
+              <form role="form"  method="post" 
                 class="ajax_form af_example">
                 <input type="tel" placeholder="+380(__) - ___- __ - __" name="phone" required>
                 <div class="agree-seo"><label><input type="checkbox" required> Даю згоду на обробку персональних
                     даних</label></div>
-                <div class="big-button"><button onclick="yaCounter50366911.reachGoal('call'); return true;"
+                <div class="big-button"><button
                     type="submit" class="blue-button">Замовити дзвінок</button></div>
-
-                <input type="hidden" name="af_action" value="4650f7b7ffb11c34bab7fc86d908798f" />
               </form>
             </div>
           </div>
@@ -502,7 +491,7 @@
           <div class="col-sm-3 info">
           </div>
           <div class="col-sm-3 phone-info">
-            <a href="tel:+38097474004" class="phone ya-phone">+38(097)47 40 04</a>
+            <a href="tel:+38097474004" class="phone ya-phone">+380(097)47 40 04</a>
             <div class="call-request" data-toggle="modal" data-target="#callRequest">Замовити зворотній дзвінок</div>
           </div>
         </div>
@@ -527,11 +516,11 @@
         <div class="modal-body">
           <div class="sub-heading">Відправте завдання на проектування та ми підготуємо для Вас коммерційну пропозицію
           </div>
-          <form role="form" enctype="multipart/form-data" method="post" action="0.html" class="ajax_form af_example">
+          <form role="form"  method="post"  class="ajax_form af_example">
             <div class="col-sm-6 contact-data">
               <div class="sub-heading">Ваші контактні дані*</div>
               <input type="text" name="name" value="" placeholder="Ваше ім'я" required>
-              <input type="tel" name="phone" value="" placeholder="+38 (___) - ___- __ - __" required>
+              <input type="tel" name="phone" value="" placeholder="+380 (__) - ___- __ - __" required>
               <input type="email" name="email" value="" placeholder="Ваш e-maill" required>
             </div>
             <div class="col-sm-6 add-data">
@@ -543,10 +532,8 @@
             </div>
             <div class="col-sm-12"><label><input type="checkbox" required> Даю згоду на обробку персональних
                 даних</label></div>
-            <div class="col-sm-12"><button onclick="yaCounter50366911.reachGoal('cost'); return true;"
+            <div class="col-sm-12"><button 
                 type="submit">замовити розрахунок</button></div>
-
-            <input type="hidden" name="af_action" value="324706175bfaf9d22e0caaaca3cb4595" />
           </form>
         </div>
       </div>
@@ -564,9 +551,9 @@
         </div>
         <div class="modal-body">
           <div class="sub-heading">Заповніть форму і ми Вам зателефонуємо!</div>
-          <form role="form" enctype="multipart/form-data" method="post" action="0.html" class="ajax_form af_example">
+          <form role="form"  method="post"  class="ajax_form af_example">
             <input type="text" name="name" value="" placeholder="Ваше ім'я">
-            <input type="tel" name="phone" value="" placeholder="+38 (___) - ___- __ - __" required>
+            <input type="tel" name="phone" value="" placeholder="+380 (__) - ___- __ - __" required>
             <div class="sub-heading text-left">Вкажіть час дзвінка *</div>
             <label class="time">з
               <select name="time-from" value="" required>
@@ -601,8 +588,6 @@
             <div class="agree-seo"><label><input type="checkbox" required> Даю згоду на обробку персональних
                 даних</label></div>
             <button type="submit" data-toggle="modal" data-target="#calcPrice">Залишити заявку</button>
-
-            <input type="hidden" name="af_action" value="36a20c439b1c5549ab7638e383d5d23c" />
           </form>
         </div>
       </div>
@@ -619,11 +604,11 @@
           <div class="modal-title h4">Замовити проект</div>
         </div>
         <div class="modal-body">
-          <form role="form" enctype="multipart/form-data" method="post" action="0.html" class="ajax_form af_example">
+          <form role="form"  method="post"  class="ajax_form af_example">
             <div class="col-sm-6 contact-data">
               <div class="sub-heading">Ваші контактні дані*</div>
               <input type="text" name="name" placeholder="Ваше ім'я" value="" required>
-              <input type="tel" name="phone" placeholder="+38 (___) - ___- __ - __" value="" required>
+              <input type="tel" name="phone" placeholder="+380 (__) - ___- __ - __" value="" required>
               <input type="email" name="email" placeholder="Ваш e-maill" value="" required>
             </div>
             <div class="col-sm-6 add-data">
@@ -636,8 +621,6 @@
             <div class="col-sm-12"><label><input type="checkbox" required> Даю згоду на обробку персональних
                 даних</label></div>
             <div class="col-sm-12"><button type="submit">Залишити заявку</button></div>
-
-            <input type="hidden" name="af_action" value="002920ce13eba71aa0fd10baf6886e51" />
           </form>
         </div>
       </div>
@@ -679,9 +662,6 @@
   <div class="up-button"><img src="assets/img/chevron-up.png" alt="стрелка вверх" title="стрелка вверх">
     <div>Наверх</div>
   </div>
-  <script type="text/javascript" src="assets/components/ajaxform/js/default.js"></script>
-  <script
-    type="text/javascript">AjaxForm.initialize({ "assetsUrl": "\/assets\/components\/ajaxform\/", "actionUrl": "\/assets\/components\/ajaxform\/action.php", "closeMessage": "\u0437\u0430\u043a\u0440\u044b\u0442\u044c \u0432\u0441\u0435", "formSelector": "form.ajax_form", "pageId": 1 });</script>
 </body>
 
 </html>
